starrs/radarr/resources/radarr-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: starrs
  labels:
    app: radarr
  name: radarr
spec:
  ports:
    - name: "radarr-7878"
      port: 7878
      protocol: TCP
      targetPort: 7878
  selector:
    app: radarr
